# Parkinsons

./: .gitattributes  .gitignore  Makefile  README.md  environment.yml  examine_data.ipynb  pyproject.toml
.github/workflows/: ci.yml
config/: data_config.yaml  experiment_config.yaml  model_config.yaml  training_config.yaml
data/: Demographics_age_sex.xlsx  dataset_metadata.csv
data/parkinsons/: parkinsons.names
data/parkinsons/telemonitoring/: parkinsons_updrs.names
scripts/: create_test_data.py  preprocess_data.py  train_random_forest.py  train_wav2vec.py
src/parkinsons_voice/: __init__.py
src/parkinsons_voice/data/: __init__.py  dataset.py  preprocessing.py
src/parkinsons_voice/models/: __init__.py  wav2vec2_classifier.py
src/parkinsons_voice/train/: __init__.py  train_random_forest.py  train_wav2vec.py
src/parkinsons_voice/utils/: __init__.py  config.py
tests/: __init__.py  test_dataset.py  test_models.py  test_preprocessing.py  test_training_integration.py
